# lesson

./: .gitignore  pyproject.toml  task.txt
backtesting/: config.yaml  dev.ipynb  main.py
data/: load_data_IS.py
optimization/: config.yaml  main.py
src/: functions.py
