[tool.poetry]
name = "lesson"
version = "0.1.0"
description = ""
authors = ["Oleksandr Nazarevych <oleksandr.o.nazarevych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"
requests = "^2.32.5"
tqdm = "^4.67.1"
vectorbt = "^0.28.1"
pyyaml = "^6.0.3"
anywidget = "^0.9.21"
nbformat = "^5.10.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
